tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@modulo_by_zero.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/modulo_by_zero.txt
---
error: Cannot divide by 0
 --> modulo_by_zero.txt:1:11
  |
1 | {{ age % (one - 1) }}
  |           ^^^^^^^
